2010-10-06  Renata Hodovan  <reni@inf.u-szeged.hu>

Reviewed by Nikolas Zimmermann.

        SVGFEMergeNodeElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=47181

        Adding layout tests for feMergeNode dynamic changes.

        * platform/mac/svg/dynamic-updates/SVGFEMergeNodeElement-dom-in-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEMergeNodeElement-dom-in-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEMergeNodeElement-svgdom-in-prop-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEMergeNodeElement-svgdom-in-prop-expected.png: Added.
        * svg/dynamic-updates/SVGFEMergeNodeElement-dom-in-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEMergeNodeElement-dom-in-attr.html: Added.
        * svg/dynamic-updates/SVGFEMergeNodeElement-svgdom-in-prop-expected.txt: Added.
        * svg/dynamic-updates/SVGFEMergeNodeElement-svgdom-in-prop.html: Added.
        * svg/dynamic-updates/script-tests/SVGFEMergeNodeElement-dom-in-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEMergeNodeElement-svgdom-in-prop.js: Added.
        (executeTest):
2010-10-06  Renata Hodovan  <reni@inf.u-szeged.hu>

        Reviewed by Nikolas Zimmermann.

        SVGFEMergeNodeElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=47181

        Since feMergeNode doesn't have own renderer, we have to call the invalidation via its parent.

        Tests: svg/dynamic-updates/SVGFEMergeNodeElement-dom-in-attr.html
               svg/dynamic-updates/SVGFEMergeNodeElement-svgdom-in-prop.html

        * svg/SVGFEMergeNodeElement.cpp:
        (WebCore::SVGFEMergeNodeElement::svgAttributeChanged):
        * svg/SVGFEMergeNodeElement.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@69206 bbb929c8-8fbe-4397-9dbb-9b2b20218538