third_party/WebKit/WebCore/svg/SVGFEMergeNodeElement.cpp
@@ -25,6 +25,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "SVGFEMergeNodeElement.h"
 
 #include "Attribute.h"
+#include "RenderSVGResource.h"
+#include "SVGFilterElement.h"
 
 namespace WebCore {
 
@@ -45,6 +47,24 @@ void SVGFEMergeNodeElement::parseMappedAttribute(Attribute* attr)
         setIn1BaseValue(value);
     else
         SVGElement::parseMappedAttribute(attr);
+}
+
+void SVGFEMergeNodeElement::svgAttributeChanged(const QualifiedName& attrName)
+{
+    SVGElement::svgAttributeChanged(attrName);
+
+    if (attrName != SVGNames::inAttr)
+        return;
+
+    Node* parentNode = parent();
+    if (!parentNode)
+        return;
+
+    RenderObject* renderer = parentNode->renderer();
+    if (!renderer || !renderer->isSVGResourceFilterPrimitive())
+        return;
+    
+    RenderSVGResource::markForLayoutAndParentResourceInvalidation(renderer);
 }
 
 void SVGFEMergeNodeElement::synchronizeProperty(const QualifiedName& attrName)
