third_party/WebKit/WebCore/svg/SVGFEMergeNodeElement.h
@@ -36,6 +36,7 @@ namespace WebCore {
         SVGFEMergeNodeElement(const QualifiedName&, Document*);
 
         virtual void parseMappedAttribute(Attribute*);
+        virtual void svgAttributeChanged(const QualifiedName&);
         virtual void synchronizeProperty(const QualifiedName&);
 
         DECLARE_ANIMATED_PROPERTY(SVGFEMergeNodeElement, SVGNames::inAttr, String, In1, in1)
